<package format="3">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>This is my first pakage</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclrs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>