[package]
name = "neo_rust"
version = "0.1.0"
edition = "2021"
authors = ["Julia Marsal <julia.marsal.robotics@gmail.com>"]
description = "Basic Ros2 Rust packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rclrs = "*"
geometry_msgs = "*"
anyhow = "*"
termios ="*"