[package]
name = "teleop_twist_keyboard"
version = "0.1.0"
edition = "2021"
authors = ["Julia Marsal <julia.marsal.robotics@gmail.com>"]
description = "Basic Ros2 Rust teleop packages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "teleop_twist_keyboard"
path = "src/teleop_twist_keyboard.rs"


[dependencies]
rclrs = "*"
geometry_msgs = "*"
anyhow = "*"
termios ="*"