
[package]
name = "topic_subscriber_pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple_subscriber_node"
path = "src/simple_topic_subscriber.rs"

[[bin]]
name = "sub_odom_node"
path = "src/sub_odom.rs"

[dependencies]
rclrs = "*"
std_msgs = "*"
geometry_msgs = "*"
nav_msgs = "*"

[package.metadata.ros]
install_to_share = ["launch"]